comment formatting & tests